1. Complate Add or Edit Functionality in profile page 2. Image Upload and Fetch in profile page

--- a/templates/admin/edit_education_info.html
+++ b/templates/admin/edit_education_info.html
@@ -12,7 +12,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{% url 'EmpEditEducationInfo' user.id edit_education_info.id%}" method="post">
+                <form action="{% url 'AdminEditEducationInfo' user.id edit_education_info.id%}" method="post">
                     {% csrf_token %}
                     <div class="card">
                         <h3 class="card-title">Education Information <a href="javascript:void(0);" class="delete-icon"><i class="fa fa-trash-o"></i></a></h3>
