--- a/templates/admin/add_education_info.html
+++ b/templates/admin/add_education_info.html
@@ -12,7 +12,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form action="{% url 'EmpAddEducationInfo' user.id %}" method="post">
+                <form action="{% url 'AdminAddEducationInfo' user.id %}" method="post">
                     {% csrf_token %}
                     <div class="row">
                         <div class="col-md-6">
