--- a/templates/admin/add_emergency_contact.html
+++ b/templates/admin/add_emergency_contact.html
@@ -12,7 +12,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form method="post" action="{% url 'EmpAddEmergencyInfo' user.id %}">
+                <form method="post" action="{% url 'AdminAddEmergencyInfo' user.id %}">
                 {% csrf_token %}
                     <div class="card">
                         <div class="card-body">
