--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -1,148 +1,164 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-        <meta name="description" content="Smarthr - Bootstrap Admin Template">
-		<meta name="keywords" content="admin, estimates, bootstrap, business, corporate, creative, management, minimal, modern, accounts, invoice, html5, responsive, CRM, Projects">
-        <meta name="author" content="Dreamguys - Bootstrap Admin Template">
-        <meta name="robots" content="noindex, nofollow">
-        <title>Register -Webmigrates HRMS</title>
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0, user-scalable=0" name="viewport">
+    <meta content="Smarthr - Bootstrap Admin Template" name="description">
+    <meta content="admin, estimates, bootstrap, business, corporate, creative, management, minimal, modern, accounts, invoice, html5, responsive, CRM, Projects"
+          name="keywords">
+    <meta content="Dreamguys - Bootstrap Admin Template" name="author">
+    <meta content="noindex, nofollow" name="robots">
+    <title>Login - Webmigrates HRMS</title>
 
-		<!-- Favicon -->
-        <link rel="shortcut icon" type="image/x-icon" href="{% static 'img/favicon.png' %}">
+    <!-- Favicon -->
+    <link href="{% static 'img/favicon.png' %}" rel="shortcut icon" type="image/x-icon">
 
-		<!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <!-- Bootstrap CSS -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
-		<!-- Fontawesome CSS -->
-        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
+    <!-- Fontawesome CSS -->
+    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 
-		<!-- Lineawesome CSS -->
-        <link rel="stylesheet" href="{% static 'css/line-awesome.min.css' %}">
+    <!-- Lineawesome CSS -->
+    <link href="{% static 'css/line-awesome.min.css' %}" rel="stylesheet">
 
-		<!-- Chart CSS -->
-		<link rel="stylesheet" href="{% static 'plugins/morris/morris.css' %}">
+    <!-- Chart CSS -->
+    <link href="{% static 'plugins/morris/morris.css' %}" rel="stylesheet">
 
-		<!-- Main CSS -->
-        <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Main CSS -->
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
-        <!-- Datatable CSS employee list -->
-		<link rel="stylesheet" href="{% static 'css/dataTables.bootstrap4.min.css' %}">
+    <!-- Datatable CSS employee list -->
+    <link href="{% static 'css/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
 
-        <!-- Select2 CSS employee -->
-		<link rel="stylesheet" href="{% static 'css/select2.min.css' %}">
+    <!-- Select2 CSS employee -->
+    <link href="{% static 'css/select2.min.css' %}" rel="stylesheet">
 
-		<!-- Datetimepicker CSS employee -->
-		<link rel="stylesheet" href="{% static 'css/bootstrap-datetimepicker.min.css' %}">
+    <!-- Datetimepicker CSS employee -->
+    <link href="{% static 'css/bootstrap-datetimepicker.min.css' %}" rel="stylesheet">
 
-        <!-- Summernote CSS -->
-		<link rel="stylesheet" href="{% static 'plugins/summernote/dist/summernote-bs4.css' %}">
+    <!-- Summernote CSS -->
+    <link href="{% static 'plugins/summernote/dist/summernote-bs4.css' %}" rel="stylesheet">
 
-        <!-- Tagsinput CSS profile-->
-		<link rel="stylesheet" href="{% static 'plugins/bootstrap-tagsinput/bootstrap-tagsinput.css' %}">
+    <!-- Tagsinput CSS profile-->
+    <link href="{% static 'plugins/bootstrap-tagsinput/bootstrap-tagsinput.css' %}" rel="stylesheet">
 
-		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-		<!--[if lt IE 9]>
-			<script src="{% static 'js/html5shiv.min.js' %}"></script>
-			<script src="{% static 'js/respond.min.js"' %}></script>
-		<![endif]-->
-    </head>
-    <body>
-	<div class="account-page mt-5 pt-5">
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+    <script src="{% static 'js/html5shiv.min.js' %}"></script>
+    <script src="{% static 'js/respond.min.js"' %}></script>
+    <![endif]-->
 
-		<!-- Main Wrapper -->
-        <div class="main-wrapper">
-			<div class="account-content">
-<!--				<a href="job-list.html" class="btn btn-primary apply-btn">Apply Job</a>-->
-				<div class="container">
+    <style>
+        *{
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          user-select: none;
+        }
+        .bg-img{
+            background: url('/media/landing_page.jpg');
+            height: 100vh;
+            background-size: cover;
+            background-position: center;
+        }
+        .bg-img:after{
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          background: rgba(0,0,0,0.0);
+        }
+        .content{
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          z-index: 999;
+          text-align: center;
+          padding: 5rem 6rem;
+          width: 30rem;
+          transform: translate(-50%,-50%);
+          background: rgba(0,0,0,0.5);
+          box-shadow: -2px 5px 5px 0px rgba(0,0,0,0.8);
+        }
+        .content header{
+          color: white;
+          font-size: 33px;
+          font-weight: 600;
+          margin: 0 0 35px 0;
+          font-family: 'Montserrat',sans-serif;
+        }
+    </style>
+</head>
+<body>
+<div class="bg-img">
+    <div class="content">
+        <header>Admin Login</header>
+        <form action="{% url 'Login' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                 <input class="form-control" name="adminphone" type="number" placeholder="Phone">
+            </div>
+            <div class="form-group">
+                <div class="row mb-2">
+                    <div class="col"></div>
+                    <div class="col-auto">
+                        <a class="text-light" href="forgot-password.html">Forgot password ?</a>
+                    </div>
+                </div>
+                <input class="form-control" name="adminpassword" type="password" placeholder="Password">
+            </div>
+            <div class="form-group text-center">
+                <button class="btn btn-primary account-btn form-control" type="submit">Login</button>
+            </div>
+            <div class="account-footer text-light">
+                <p>Don't have an account yet? <a href="admin_register">Register</a></p>
+            </div>
+        </form>
+    </div>
+</div>
+</div>
 
-					<!-- Account Logo -->
-					<div class="account-logo">
-						<a href=""><img src="{% static 'img/logo2.png' %}" alt="Dreamguy's Technologies"></a>
-					</div>
-					<!-- /Account Logo -->
 
-					<div class="account-box">
-						<div class="account-wrapper">
-							<h3 class="account-title">Admin Login</h3>
-<!--							<p class="account-subtitle">Access to our dashboard</p>-->
+<!-- jQuery -->
+<script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 
-							<!-- Account Form -->
-							<form action="{% url 'Login' %}" method="post">
-								{% csrf_token %}
-								<div class="form-group">
-									<label>Phone</label>
-									<input class="form-control" type="number" name="adminphone">
-								</div>
-								<div class="form-group">
-									<div class="row">
-										<div class="col">
-											<label>Password</label>
-										</div>
-										<div class="col-auto">
-											<a class="text-muted" href="forgot-password.html">
-												Forgot password?
-											</a>
-										</div>
-									</div>
-									<input class="form-control" type="password" name="adminpassword">
-								</div>
-								<div class="form-group text-center">
-									<button class="btn btn-primary account-btn" type="submit">Login</button>
-								</div>
-								<div class="account-footer">
-									<p>Don't have an account yet? <a href="admin_register">Register</a></p>
-								</div>
-							</form>
-							<!-- /Account Form -->
+<!-- Bootstrap Core JS -->
+<script src="{% static 'js/popper.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
 
-						</div>
-					</div>
-				</div>
-			</div>
-        </div>
-	</div>
-		<!-- /Main Wrapper -->
+<!-- Slimscroll JS -->
+<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
 
+<!-- Select2 JS employee-->
+<script src="{% static 'js/select2.min.js' %}"></script>
 
-        <!-- jQuery -->
-        <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+<!-- Datetimepicker JS employee -->
+<script src="{% static 'js/moment.min.js' %}"></script>
+<script src="{% static 'js/bootstrap-datetimepicker.min.js' %}"></script>
 
-		<!-- Bootstrap Core JS -->
-        <script src="{% static 'js/popper.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.min.js' %}"></script>
+<!-- Tagsinput JS -->
+<script src="{% static 'plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js' %}"></script>
 
-		<!-- Slimscroll JS -->
-		<script src="{% static 'js/jquery.slimscroll.min.js' %}"></script>
+<!-- Datatable JS -->
+<script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'js/dataTables.bootstrap4.min.js' %}"></script>
 
-        <!-- Select2 JS employee-->
-		<script src="{% static 'js/select2.min.js' %}"></script>
+<!-- Task JS -->
+<script src="{% static 'js/task.js' %}"></script>
 
-        <!-- Datetimepicker JS employee -->
-		<script src="{% static 'js/moment.min.js' %}"></script>
-		<script src="{% static 'js/bootstrap-datetimepicker.min.js' %}"></script>
+<!-- Chart JS -->
+<script src="{% static 'plugins/morris/morris.min.js' %}"></script>
+<script src="{% static 'plugins/raphael/raphael.min.js' %}"></script>
+<script src="{% static 'js/chart.js' %}"></script>
 
-        <!-- Tagsinput JS -->
-		<script src="{% static 'plugins/bootstrap-tagsinput/bootstrap-tagsinput.min.js' %}"></script>
+<!-- Summernote JS -->
+<script src="{% static 'plugins/summernote/dist/summernote-bs4.min.js' %}"></script>
 
-        <!-- Datatable JS -->
-		<script src="{% static 'js/jquery.dataTables.min.js' %}"></script>
-		<script src="{% static 'js/dataTables.bootstrap4.min.js' %}"></script>
-
-		<!-- Task JS -->
-		<script src="{% static 'js/task.js' %}"></script>
-
-		<!-- Chart JS -->
-		<script src="{% static 'plugins/morris/morris.min.js' %}"></script>
-		<script src="{% static 'plugins/raphael/raphael.min.js' %}"></script>
-		<script src="{% static 'js/chart.js' %}"></script>
-
-        <!-- Summernote JS -->
-		<script src="{% static 'plugins/summernote/dist/summernote-bs4.min.js' %}"></script>
-
-		<!-- Custom JS -->
-		<script src="{% static 'js/app.js' %}"></script>
+<!-- Custom JS -->
+<script src="{% static 'js/app.js' %}"></script>
 </body>
 </html>
