--- a/templates/employee/profile.html
+++ b/templates/employee/profile.html
@@ -198,6 +198,7 @@
 											<button class="edit-icon ml-2" onclick="addEmergencyInfo({{user_details.id}})"><i class="fa fa-plus"></i></button>
 											<button class="edit-icon mr-1" onclick="editEmergencyInfo({{user_details.id}}, {{view_emergency_contact.id}})"><i class="fa fa-pencil"></i></button>
 											<h2 class="card-title">Emergency Contact</h2>
+											{% if view_emergency_contact %}
 											<div class="d-flex">
 												<div class="col-md-6 border-right">
 													<h4 class="section-title">Primary</h4>
@@ -234,6 +235,7 @@
 													</ul>
 												</div>
 											</div>
+											{% endif %}
 										</div>
 									</div>
 								</div>
