[ADDED] email verification

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -272,7 +272,7 @@
 								</div>
 
 								<div class="card-footer">
-									<a href="projects.html">View all projects</a>
+									<a href="{% url 'AdminProjectsView %}">View all projects</a>
 								</div>
 							</div>
 						</div>
