[ADDED] django message handaling add

--- a/templates/admin/edit_experience_info.html
+++ b/templates/admin/edit_experience_info.html
@@ -6,7 +6,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title">Add Experience Informations</h2>
+                <h2 class="modal-title">Edit Experience Informations</h2>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
