--- a/templates/admin/edit_emergency_contact.html
+++ b/templates/admin/edit_emergency_contact.html
@@ -6,7 +6,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">Emergency Contact Information</h3>
+                <h3 class="modal-title">Edit Emergency Contact Information</h3>
                 <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                     <span aria-hidden="true">&times;</span>
                 </button>
