--- a/templates/admin/edit_profile_info.html
+++ b/templates/admin/edit_profile_info.html
@@ -6,7 +6,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 class="modal-title">Profile Information</h3>
+                <h3 class="modal-title">Edit Profile Information</h3>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
