--- a/templates/admin/employees.html
+++ b/templates/admin/employees.html
@@ -3,6 +3,9 @@
 {% block body %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
+				{% for message in messages %}
+				<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+				{% endfor %}
 			
 				<!-- Page Content -->
                 <div class="content container-fluid">
@@ -132,6 +135,13 @@ function deleteEmployee(deleteEmployeeId) {
         $("#confirmDeleteBtn").attr("href", deleteUrl);
     }
 }
+</script>
+<script>
+    window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove();
+        });
+    }, 1600);
 </script>
 
 {% endblock body %}
