--- a/templates/admin/holidays_list.html
+++ b/templates/admin/holidays_list.html
@@ -3,6 +3,9 @@
 {% block body %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
+				{% for message in messages %}
+				<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+				{% endfor %}
 
 				<!-- Page Content -->
                 <div class="content container-fluid">
@@ -122,6 +125,13 @@ function deleteHoliday(deleteHolidayId) {
     }
 }
 
+</script>
+<script>
+    window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove();
+        });
+    }, 1600);
 </script>
 
 {% endblock body %}
