--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -3,7 +3,9 @@
 {% block body %}
 	<!-- Page Wrapper -->
             <div class="page-wrapper">
-
+				{% for message in messages %}
+				<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+				{% endfor %}
 				<!-- Page Content -->
                 <div class="content container-fluid">
 
@@ -272,7 +274,7 @@
 								</div>
 
 								<div class="card-footer">
-									<a href="{% url 'AdminProjectsView %}">View all projects</a>
+									<a href="{% url 'AdminProjectsView' %}">View all projects</a>
 								</div>
 							</div>
 						</div>
@@ -331,5 +333,12 @@
 
             </div>
 			<!-- /Page Wrapper -->
+<script>
+    window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove();
+        });
+    }, 1600);
+</script>
 
 {% endblock body %}
