--- a/templates/admin/task-nav.html
+++ b/templates/admin/task-nav.html
@@ -2,6 +2,9 @@
 {% block body %}
 	<!-- Page Wrapper -->
             <div class="page-wrapper">
+				{% for message in messages %}
+				<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+				{% endfor %}
 
 				<!-- Page Content -->
                 <div class="content container-fluid">
@@ -37,5 +40,12 @@
 
             </div>
 			<!-- /Page Wrapper -->
+<script>
+    window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove();
+        });
+    }, 1600);
+</script>
 
  {% endblock body %}
