--- a/templates/admin/technology.html
+++ b/templates/admin/technology.html
@@ -3,6 +3,9 @@
 {% block body %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
+				{% for message in messages %}
+				<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+				{% endfor %}
 			
 				<!-- Page Content -->
                 <div class="content container-fluid">
@@ -85,6 +88,13 @@
 				<!-- /Delete Technology Modal -->
             </div>
 			<!-- /Page Wrapper -->
+<script>
+    window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove();
+        });
+    }, 1600);
+</script>
 
 <script>
 function addTechnology() {
