--- a/templates/employee/profile.html
+++ b/templates/employee/profile.html
@@ -3,7 +3,9 @@
 {% block body %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
-
+				{% for message in messages %}
+				<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+				{% endfor %}
 				<!-- Page Content -->
                 <div class="content container-fluid">
 
@@ -340,6 +342,13 @@ function editEmergencyInfo(UserId, EmgId) {
 }
 
 
+</script>
+<script>
+    window.setTimeout(function() {
+        $(".alert").fadeTo(500, 0).slideUp(500, function(){
+            $(this).remove();
+        });
+    }, 1600);
 </script>
 
 {% endblock body %}
