[ADDED] Forgot Passwprd with email

--- a/templates/admin/forgot_password_email_template.html
+++ b/templates/admin/forgot_password_email_template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>HRMS : User Create</title>
+    <title>HRMS : Password Reset</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
 </head>
 <body style="margin:auto; width:50rem;">
@@ -11,17 +11,17 @@
         <td style="text-align:center; padding:1rem 1.5rem;"><h1 style="color:#FF7517;">Webmigrates</h1></td>
     </tr>
     <tr>
-        <td style="text-align:center; color:#2C2727"><h1>You are added in webmigrates team.</h1></td>
+        <td style="text-align:center; color:#2C2727"><h1>FORGOT PASSWORD</h1></td>
     </tr>
     <tr>
-        <td style="text-align:center; color:#2C2727"><h3>Welcome <strong>{{username}}</strong>.</h3></td>
+        <td style="text-align:center; color:#2C2727"><h3>Hello, <strong>{{username}}</strong>{{user_id}}.</h3></td>
     </tr>
     <tr>
-        <td style="text-align:center; color:#2C2727;"><h4 style="margin:4rem;">Congratulations and welcome to the team! We are excited to have you at Webmigrates. We know you're going to be a valuable asset to our company and are looking forward to the positive impact you're going to have here.</h4></td>
+        <td style="text-align:center; color:#2C2727;"><h4 style="margin:2rem 4rem;">You recently requested to reset the password for your account. Click the button below to proceed. If you did not request a password reset, please ignore this email or reply to let us know.</h4></td>
     </tr>
     <tr>
         <td style="text-align:center; color:#F6F4F4; padding:1rem 0rem;">
-            <a href="http://127.0.0.1:8000/hrms/employee/login/" style="background-color:#3E3939; border:0; padding:1rem 5rem; border-radius: 8rem; text-decoration:none; color:#F6F4F4" title="{{ username }}">Log In</a>
+            <a href="http://127.0.0.1:8000/hrms-admin/admin-password-reset/{{ user_id }}" style="background-color:#3E3939; border:0; padding:1rem 5rem; border-radius: 8rem; text-decoration:none; color:#F6F4F4" title="{{ username }}">Forgot Password</a>
         </td>
     </tr>
     <tr>
