--- a/templates/employee/forgot_password.html
+++ b/templates/employee/forgot_password.html
@@ -9,7 +9,7 @@
           name="keywords">
     <meta content="Dreamguys - Bootstrap Admin Template" name="author">
     <meta content="noindex, nofollow" name="robots">
-    <title>Login - Webmigrates HRMS</title>
+    <title>HRMS : Forgot Password</title>
 
     <!-- Favicon -->
     <link href="{% static 'img/favicon.png' %}" rel="shortcut icon" type="image/x-icon">
@@ -96,28 +96,22 @@
 <body>
 <div class="bg-img">
     <div class="content">
-        <div class="show_message">
+        <div>
             {% for message in messages %}
             <div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
             {% endfor %}
         </div>
-        <header>Employee Login</header>
-        <form action="{% url 'EmployeeLogin' %}" method="post">
+        <header>Forgot Password</header>
+        <form action="{% url 'emp_update_password' user_id %}" method="post">
             {% csrf_token %}
             <div class="form-group">
-                <input class="form-control" name="employeephone" type="number" placeholder="Phone">
+                <input class="form-control" name="employee_password" type="password" placeholder="Password">
             </div>
             <div class="form-group">
-                <input class="form-control" name="employeepassword" type="password" placeholder="Password">
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col-auto mt-2">
-                        <a class="text-info" href="javascript:void(0);" id="forget-password-link">Forget Password ?</a>
-                    </div>
-                </div>
+                <input class="form-control" name="employee_confirm_password" type="password" placeholder="Confirm Password">
             </div>
             <div class="form-group text-center mt-5">
-                <button class="btn btn-primary account-btn form-control" type="submit">Login</button>
+                <button class="btn btn-primary account-btn form-control" type="submit">Change Password</button>
             </div>
         </form>
     </div>
@@ -168,47 +162,6 @@ window.setTimeout(function() {
         $(this).remove();
     });
 }, 1600);
-
-$("#forget-password-link").click(function(e) {
-    e.preventDefault();
-    var employeephone = $("[name='employeephone']").val();
-    if (employeephone) {
-        $.ajax({
-            url: '{% url "emp_forget_password_mail" %}',
-            type: 'POST',
-            data: {
-                'employeephone': employeephone,
-                'csrfmiddlewaretoken': $('input[name=csrfmiddlewaretoken]').val()
-            },
-            success: function(response) {
-                var messageBox = $("<div>").addClass("alert alert-success").attr("role", "alert").text("A password reset email has been sent.");
-                $(".show_message").prepend(messageBox);
-                setTimeout(function() {
-                    messageBox.fadeTo(500, 0).slideUp(500, function(){
-                        $(this).remove();
-                    });
-                }, 2000);
-            },
-            error: function(xhr, errmsg, err) {
-                var messageBox = $("<div>").addClass("alert alert-danger").attr("role", "alert").text("A password reset email has been not sent.");
-                $(".show_message").prepend(messageBox);
-                setTimeout(function() {
-                    messageBox.fadeTo(500, 0).slideUp(500, function(){
-                        $(this).remove();
-                    });
-                }, 2000);
-            }
-        });
-    } else {
-        var messageBox = $("<div>").addClass("alert alert-warning").attr("role", "alert").text("Please enter phone number");
-        $(".show_message").prepend(messageBox);
-        setTimeout(function() {
-            messageBox.fadeTo(500, 0).slideUp(500, function(){
-                $(this).remove();
-            });
-        }, 2000);
-    }
-});
 </script>
 
 </body>
