--- a/templates/admin/add_department.html
+++ b/templates/admin/add_department.html
@@ -2,17 +2,19 @@
 {% load static %}
 
 <!-- Add Department Modal -->
-<div class="modal fade" id="add_department_model" role="dialog" tabindex="-1" aria-hidden="true" aria-labelledby="editModelToggleLabel">
+<div aria-hidden="true" aria-labelledby="editModelToggleLabel" class="modal fade" id="add_department_model"
+     role="dialog"
+     tabindex="-1">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h3 class="modal-title">Add Department</h3>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <form method="post" id="form" action="{% url 'AdminAddDepartment' %}" enctype="multipart/form-data">
+                <form action="{% url 'AdminAddDepartment' %}" enctype="multipart/form-data" id="form" method="post">
                     {% csrf_token %}
                     <div class="form-group">
                         {{ form|crispy }}
