--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -3,14 +3,14 @@
 {% block head %}
 
 <style>
-.summary-wrap {
-	overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
-   -webkit-line-clamp: 4;
-           line-clamp: 4;
-   -webkit-box-orient: vertical;
-}
+    .summary-wrap {
+        overflow: hidden;
+       text-overflow: ellipsis;
+       display: -webkit-box;
+       -webkit-line-clamp: 4;
+               line-clamp: 4;
+       -webkit-box-orient: vertical;
+    }
 
 
 </style>
@@ -18,150 +18,154 @@
 {% endblock head %}
 
 {% block body %}
-			<!-- Page Wrapper -->
-            <div class="page-wrapper">
-				{% for message in messages %}
-				<div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
-				{% endfor %}
-			
-				<!-- Page Content -->
-                <div class="content container-fluid">
-				
-					<!-- Page Header -->
-					<div class="page-header">
-						<div class="row align-items-center">
-							<div class="col">
-								<h3 class="page-title">Projects</h3>
-								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
-									<li class="breadcrumb-item active">Projects</li>
-								</ul>
-							</div>
-							<div class="col-auto float-right ml-auto">
-								<button class="btn add-btn" onclick="addProject()"><i class="fa fa-plus"></i> Add Project</button>
-								<div class="view-icons">
-									<a href="projects.html" class="grid-view btn btn-link active"><i class="fa fa-th"></i></a>
-									<a href="project-list.html" class="list-view btn btn-link"><i class="fa fa-bars"></i></a>
-								</div>
-							</div>
-						</div>
-					</div>
-					<!-- /Page Header -->
-					
-					<!-- Search Filter -->
-					<div class="row filter-row">
-						<div class="col-sm-6 col-md-3">  
-							<div class="form-group form-focus">
-								<input type="text" class="form-control floating">
-								<label class="focus-label">Project Name</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">  
-							<div class="form-group form-focus">
-								<input type="text" class="form-control floating">
-								<label class="focus-label">Employee Name</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3"> 
-							<div class="form-group form-focus select-focus">
-								<select class="select floating"> 
-									<option>Select Roll</option>
-									<option>Web Developer</option>
-									<option>Web Designer</option>
-									<option>Android Developer</option>
-									<option>Ios Developer</option>
-								</select>
-								<label class="focus-label">Designation</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">  
-							<a href="#" class="btn btn-success btn-block"> Search </a>  
-						</div>     
-                    </div>
-					<!-- Search Filter -->
+<!-- Page Wrapper -->
+<div class="page-wrapper">
+    <div class="show_message">
+        {% for message in messages %}
+        <div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
+        {% endfor %}
+    </div>
 
-				<!-- /Page Content -->
-					<div class="row">
-						{% for project in projectlist %}
-						<div class="col-lg-4 col-sm-6 col-md-4 col-xl-3">
-							<div class="card">
-								<div class="card-body">
-									<div class="dropdown profile-action">
-										<button class="dropdown-item px-1 py-0 rounded d-sm-block text-center text-danger" onclick="deleteProject({{project.id}})"><i class="las la-lg la-trash"></i></button>
-									</div>
-									<h4 class="project-title"><a href="projects/details-view/{{project.id}}">{{project.project_name}}</a></h4>
-									<small class="block text-ellipsis m-b-15">
-										<span class="text-xs">1</span> <span class="text-muted">open tasks, </span>
-										<span class="text-xs">9</span> <span class="text-muted">tasks completed</span>
-									</small>
-									<p class="text-muted summary-wrap">{{project.project_summary}}</p>
-									<div class="pro-deadline m-b-15 mt-4">
-										<div class="sub-title">
-											Deadline:
-										</div>
-										<div class="text-muted">
-											{{project.project_end_date|date:'j - F - Y'}}
-										</div>
-									</div>
-<!--									<p class="m-b-5">Progress <span class="text-success float-right">40%</span></p>-->
-<!--									<div class="progress progress-xs mb-0">-->
-<!--										<div class="progress-bar bg-success" role="progressbar" data-toggle="tooltip" title="40%" style="width: 40%"></div>-->
-<!--									</div>-->
-								</div>
-							</div>
-						</div>
-						{% endfor %}
-					</div>
+    <!-- Page Content -->
+    <div class="content container-fluid">
+
+        <!-- Page Header -->
+        <div class="page-header">
+            <div class="row align-items-center">
+                <div class="col">
+                    <h3 class="page-title">Projects</h3>
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                        <li class="breadcrumb-item active">Projects</li>
+                    </ul>
                 </div>
-				<!-- /Page Content -->
-
-				<div id="add-project-form"></div>
-
-				<!-- Delete Project Modal -->
-				<div class="modal custom-modal fade" id="delete_project_model" role="dialog">
-					<div class="modal-dialog modal-dialog-centered">
-						<div class="modal-content">
-							<div class="modal-body">
-								<div class="form-header">
-									<h3>Delete Project</h3>
-									<p>Are you sure want to delete?</p>
-								</div>
-								<div class="modal-btn delete-action">
-									<div class="row">
-										<div class="col-6">
-											<a id="confirmDeleteBtn" href="#" class="btn btn-primary continue-btn">Delete</a>
-										</div>
-										<div class="col-6">
-											<a href="javascript:void(0);" data-dismiss="modal" class="btn btn-primary cancel-btn">Cancel</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<!-- /Delete Project Modal -->
-				
+                <div class="col-auto float-right ml-auto">
+                    <button class="btn add-btn" onclick="addProject()"><i class="fa fa-plus"></i> Add Project</button>
+                    <div class="view-icons">
+                        <a class="grid-view btn btn-link active" href="projects.html"><i class="fa fa-th"></i></a>
+                        <a class="list-view btn btn-link" href="project-list.html"><i class="fa fa-bars"></i></a>
+                    </div>
+                </div>
             </div>
-			<!-- /Page Wrapper -->
+        </div>
+        <!-- /Page Header -->
+
+        <!-- Search Filter -->
+        <div class="row filter-row">
+            <div class="col-sm-6 col-md-3">
+                <div class="form-group form-focus">
+                    <input class="form-control floating" type="text">
+                    <label class="focus-label">Project Name</label>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="form-group form-focus">
+                    <input class="form-control floating" type="text">
+                    <label class="focus-label">Employee Name</label>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <div class="form-group form-focus select-focus">
+                    <select class="select floating">
+                        <option>Select Roll</option>
+                        <option>Web Developer</option>
+                        <option>Web Designer</option>
+                        <option>Android Developer</option>
+                        <option>Ios Developer</option>
+                    </select>
+                    <label class="focus-label">Designation</label>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-3">
+                <a class="btn btn-success btn-block" href="#"> Search </a>
+            </div>
+        </div>
+        <!-- Search Filter -->
+
+        <!-- /Page Content -->
+        <div class="row">
+            {% for project in projectlist %}
+            <div class="col-lg-4 col-sm-6 col-md-4 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="dropdown profile-action">
+                            <button class="dropdown-item px-1 py-0 rounded d-sm-block text-center text-danger"
+                                    onclick="deleteProject({{project.id}})"><i class="las la-lg la-trash"></i></button>
+                        </div>
+                        <h4 class="project-title"><a href="projects/details-view/{{project.id}}">{{project.project_name}}</a>
+                        </h4>
+                        <small class="block text-ellipsis m-b-15">
+                            <span class="text-xs">1</span> <span class="text-muted">open tasks, </span>
+                            <span class="text-xs">9</span> <span class="text-muted">tasks completed</span>
+                        </small>
+                        <p class="text-muted summary-wrap">{{project.project_summary}}</p>
+                        <div class="pro-deadline m-b-15 mt-4">
+                            <div class="sub-title">
+                                Deadline:
+                            </div>
+                            <div class="text-muted">
+                                {{project.project_end_date|date:'j - F - Y'}}
+                            </div>
+                        </div>
+                        <!--									<p class="m-b-5">Progress <span class="text-success float-right">40%</span></p>-->
+                        <!--									<div class="progress progress-xs mb-0">-->
+                        <!--										<div class="progress-bar bg-success" role="progressbar" data-toggle="tooltip" title="40%" style="width: 40%"></div>-->
+                        <!--									</div>-->
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    <!-- /Page Content -->
+
+    <div id="add-project-form"></div>
+
+    <!-- Delete Project Modal -->
+    <div class="modal custom-modal fade" id="delete_project_model" role="dialog">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="form-header">
+                        <h3>Delete Project</h3>
+                        <p>Are you sure want to delete?</p>
+                    </div>
+                    <div class="modal-btn delete-action">
+                        <div class="row">
+                            <div class="col-6">
+                                <a class="btn btn-primary continue-btn" href="#" id="confirmDeleteBtn">Delete</a>
+                            </div>
+                            <div class="col-6">
+                                <a class="btn btn-primary cancel-btn" data-dismiss="modal" href="javascript:void(0);">Cancel</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- /Delete Project Modal -->
+
+</div>
+<!-- /Page Wrapper -->
 
 <script>
-function addProject() {
-    $.ajax({
-        url: "{% url 'AdminAddProjects' %}",
-        success: function(response) {
-            $("#add-project-form").html(response);
-            $("#add_project_model").modal('show');
-        }
-    });
-}
-function deleteProject(deleteProjectId) {
-    $("#delete_project_model").modal('show');
-    if (deleteProjectId) {
-        var deleteUrl = "{% url 'AdminDeleteProject' id=0 %}".replace(0, deleteProjectId);
-        $("#confirmDeleteBtn").attr("href", deleteUrl);
+    function addProject() {
+        $.ajax({
+            url: "{% url 'AdminAddProjects' %}",
+            success: function(response) {
+                $("#add-project-form").html(response);
+                $("#add_project_model").modal('show');
+            }
+        });
     }
-}
+    function deleteProject(deleteProjectId) {
+        $("#delete_project_model").modal('show');
+        if (deleteProjectId) {
+            var deleteUrl = "{% url 'AdminDeleteProject' id=0 %}".replace(0, deleteProjectId);
+            $("#confirmDeleteBtn").attr("href", deleteUrl);
+        }
+    }
 
 </script>
 <script>
