[ADDED] Ticket Generate

--- a/templates/employee/navigationpanel.html
+++ b/templates/employee/navigationpanel.html
@@ -98,12 +98,10 @@
                 <li><a href="{% url 'EmpDepartmentView' %}"><i class="las la-building"></i><span>Departments</span></a></li>
                 <li><a href="{% url 'EmpDesignationView' %}"><i class="lab la-buffer"></i><span>Designation</span></a></li>
                 <li><a href="{% url 'EmpTechnologyView' %}"><i class="las la-code"></i><span>Technology</span></a></li>
+                <li><a href="{% url 'EmpTickets' user.id %}"><i class="la la-ticket"></i> <span>Tickets</span></a></li>
                 <li><a href="{% url 'EmpProfileView' user.id %}"><i class="las la-user"></i><span>Profile</span></a></li>
 <!--                <li><a href="clients"><span>Clients</span></a></li>-->
 <!--                <li><a href="leads.html"><span>Leads</span></a></li>-->
-                <!--							<li>-->
-                <!--								<a href="tickets.html"><i class="la la-ticket"></i> <span>Tickets</span></a>-->
-                <!--							</li>-->
 <!--                <li><a href="trainers.html"><span>Trainers</span></a></li>-->
                 <!--							<li><a href="promotion.html"><i class="la la-bullhorn"></i> <span>Promotion</span></a></li>-->
                 <!--							<li><a href="resignation.html"><i class="la la-external-link-square"></i> <span>Resignation</span></a></li>-->
